syntax = "proto3";

package transaction;

option go_package = "/proto";


service TransactionService {
    rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse);
    rpc GetTransaction(GetTransactionRequest) returns (GetTransactionResponse);
    rpc ListTransactions(ListTransactionsRequest) returns (ListTransactionsResponse);
}

message CreateTransactionRequest {
    int64 amount = 1;
    string currency = 2;
    string payment_method = 3;
    string description = 4;
    string customer_id = 5;
}

message CreateTransactionResponse {
    string transaction_id = 1;
    string status = 2;
    string created_at = 3;
}

message GetTransactionRequest {
    string transaction_id = 1;
}

message GetTransactionResponse {
    string transaction_id = 1;
    string status = 2;
    int64 amount = 3;
    string currency = 4;
    string payment_method = 5;
    string description = 6;
    string customer_id = 7;
    string created_at = 8;
    string updated_at = 9;
}

message ListTransactionsRequest {
    string customer_id = 1;
}

message ListTransactionsResponse {
    repeated GetTransactionResponse transactions = 1;
}
